applications/hello-world/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
spec:
  type: ClusterIP
  selector:
    app: hello-world
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 5678
