applications/hello-world/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: hello-world-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - guccidemo.ddnsking.com
    # - port:
    #     number: 443
    #     name: https
    #     protocol: HTTPS
    #   tls:
    #     mode: SIMPLE
    #     credentialName: hello-world-cert
    #   hosts:
    #     - hello-world.local
