applications/hello-world/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hello-world
spec:
  hosts:
    - guccidemo.ddnsking.com
  gateways:
    - istio-system/homelab-gateway
  http:
    - match:
        - uri:
            prefix: /hello-world
      route:
        - destination:
            host: hello-world-service
            port:
              number: 3000
          weight: 100
